--- a/index.html
+++ b/index.html
@@ -9,5 +9,9 @@
     <title>Video Player</title>
 </head>
 <body>
+    <div class="mainContainer">
+        <video width="400" src="./assets/Campfire.mp4" controls>
+        </video>
+    </div>
 </body>
 </html>
