Video player design completed

--- a/index.html
+++ b/index.html
@@ -10,8 +10,17 @@
 </head>
 <body>
     <div class="mainContainer">
-        <video width="400" src="./assets/Campfire.mp4" controls>
-        </video>
+        <div class="wrapper">
+            <video width="400" src="./assets/Campfire.mp4" controls>
+                <button class="backward"></button>
+                <button class="prev"></button>
+                <button class="next"></button>
+            </video>
+                <img src="./assets/forward.svg" alt="" class="forward">
+                <img src="./assets/forward.svg" alt="" class="backward">
+                <img src="./assets/prev.svg" alt="" class="prev">
+                <img src="./assets/prev.svg" alt="" class="next">
+        </div>
     </div>
 </body>
 </html>
