src removed from video

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="mainContainer">
         <div class="wrapper">
-            <video width="400" src="./assets/Campfire.mp4" controls>
+            <video width="400" src="" controls>
             </video>
                 <img src="./assets/forward.svg" alt="" class="forward">
                 <img src="./assets/forward.svg" alt="" class="backward">
